ACTU: BOOTSTRAP A LA CALLE, LINK HOMEPAGE - REGISTRO, LIBS BBDD, CSS (footer/contenedor)

--- a/source/html/Local.html
+++ b/source/html/Local.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css">
-        <link href="Local_CSS.css" rel="stylesheet" type="text/css"/>
-        <link href="ComunPerfiles.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/Local_CSS.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/ComunPerfiles.css" rel="stylesheet" type="text/css"/>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
             <header class="headerperfiles">
                 <div id="logo">
 
-                    <img class="imagenlogo" src="img/musta.jpg" alt=""/>
+                    <img class="imagenlogo" src="../img/musta.jpg" alt=""/>
 
                 </div>
                 <div id="nombreweb">
@@ -30,7 +30,7 @@
             <div class="divsperfilizq">
 
 
-                <img class="imagen"  src="img/abs.jpg" alt="" />
+                <img class="imagen"  src="../img/abs.jpg" alt="" />
                <button type="submit" name="cambiarfoto" class="btncambiarfotovideo">Cambiar</button>
 
 
@@ -96,7 +96,7 @@
             <div class="divsperfilderch">
                 <div class="publi">
 
-                    <img class="banner" src="img/fashion.jpg" alt=""/>
+                    <img class="banner" src="../img/fashion.jpg" alt=""/>
                 </div>
                 <div class="proximosconciertos">
                     <h1 class="conciertos">
@@ -135,7 +135,7 @@
             </div>
             
             <div class="divsperfilderch">
-                <img class="video" src="img/abs2.jpg" alt=""/>
+                <img class="video" src="../img/abs2.jpg" alt=""/>
                 <button type="submit" name="cambiarvideo" class="btncambiarfotovideo">Cambiar</button>
             </div>
           
