--- a/source/html/Musicos.html
+++ b/source/html/Musicos.html
@@ -4,8 +4,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css">
-        <link href="ComunPerfiles.css" rel="stylesheet" type="text/css"/>
-        <link href="Musicos_CSS.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/ComunPerfiles.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/Musicos_CSS.css" rel="stylesheet" type="text/css"/>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
             <header class="headerperfiles">
                 <div id="logo">
 
-                    <img class="imagenlogo" src="img/musta.jpg" alt=""/>
+                    <img class="imagenlogo" src="../img/musta.jpg" alt=""/>
 
                 </div>
                 <div id="nombreweb">
@@ -31,7 +31,7 @@
 
             <div class="divsperfilizq">
 
-                <img class="imagen" src="img/abs.jpg" alt=""/>
+                <img class="imagen" src="../img/abs.jpg" alt=""/>
                                 
              
              <button type="submit" name="cambiarfoto" class="btncambiarfotovideo">Cambiar</button>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="divbanner">
-                <img class="banner" src="img/voll.png" alt=""/>
+                <img class="banner" src="../img/voll.png" alt=""/>
             </div>
             <div id="buscarlocales">
                 <div id="enviarsolicitudes" >
@@ -104,7 +104,7 @@
                 </div>
             </div>
              <div class="divsperfilderch">
-                <img class="video" src="img/abs2.jpg" alt=""/>
+                <img class="video" src="../img/abs2.jpg" alt=""/>
 <button type="submit" name="cambiarvideo" class="btncambiarfotovideo">Cambiar</button>
             </div>
              <div class="donativos">
