--- a/source/html/homepage_sucia.html
+++ b/source/html/homepage_sucia.html
@@ -3,30 +3,50 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Homepage</title>
-	<link rel="stylesheet" href="../css/homepage.css" type="text/css"/>
+	<link href="../css/estilos.css" rel="stylesheet" type="text/css"/>
+	<link href="../css/homepage.css" rel="stylesheet" type="text/css"/>
+	
 </head>
-<body>
+<body class="bodyperfiles">
 	<header>
 		<nav id="Menu">
-		  <div class="#"></div>
-		    
+		  <a href="#">NUESTRAS BANDAS</a>
+		  <a href="#">NUESTROS GARITOS</a>
+		  <a href="#">NUESTROS BOLOS</a>
+		  <a href="#">LO ÚLTIMO</a>
+		  <a href="#">ESTILOS MUSICALES</a>
 		</nav>
+		<div id="registros">
+			<form action="registro.html"> <!--Aqui va la pagina a la que redirige el buton-->	
+   				<input type="submit" value="Registrate" />
+   			</form>
+   			<form action="#"></form>
+				<input type="submit" value="Inicia sesión" /><!--Aqui va la pagina a la que redirige el buton-->
+			</form>
+			<a href="#"></a>
+			<a href="#"></a>
+			
+		</div>
+		<hr>
 	</header>
-	<div id="logo"><img src="../img/big_logo.png" alt=""></div>
+	<div id="biglogo"><img src="../img/big_logo.png" alt=""></div>
 	<div id="search"><input type="search" name="buscador" id="" placeholder="Buscar..."></div>
 	
+	<div class="title-homepage">Nuestras Bandas</div>
 	<div id="img-bandas"> Imatge bandas<img src=""></img></div>
 	<div class="info">
 		<div id="txt-bandas"> Text bandas</div>
 		<div id="destacado-bandas"> Destac bandas</div>
 	</div>
 	
+	<div class="title-homepage">Nuestros garitos</div>
 	<div id="img-garitos"> Imatge garitos<img src=""></img></div>
 	<div class="info">
 		<div id="txt-garitos"> Text garitos</div>
 		<div id="destacado-garitos"> Destacat garitos</div>
 	</div>
 	
+	<div class="title-homepage">Nuestros bolos</div>
 	<div id="img-bolos"> Imatge bolos<img src=""></img></div>
 	<div class="info">
 		<div id="txt-bolos"> Text bolos</div>
@@ -52,7 +72,7 @@
 	<div class="img-estilos"> imatge estils</div>
 	
 	<footer>
-		
+		<hr>
 	</footer>
 </body>
 </html>
