COMMIT ANTES DE BORRAR ComunPerfiles.css (todo funcional)

--- a/source/html/Musicos.html
+++ b/source/html/Musicos.html
@@ -4,14 +4,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css">
-        <link href="../css/ComunPerfiles.css" rel="stylesheet" type="text/css"/>
         <link href="../css/Musicos_CSS.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/estilos.css" rel="stylesheet" type="text/css"/>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body class="bodyperfiles">
-   <div class="contenedorperfil">
+        <div class="container-profile">
             <header class="headerperfiles">
                 <div id="logo">
 
