--- a/source/html/homepage_sucia.html
+++ b/source/html/homepage_sucia.html
@@ -7,8 +7,8 @@
 	<link href="../css/homepage.css" rel="stylesheet" type="text/css"/>
 	
 </head>
-<body class="bodyperfiles">
-	<header>
+<body class="bodyhomepage">
+	<header class="headerperfiles">
 		<nav id="Menu">
 		  <a href="#">NUESTRAS BANDAS</a>
 		  <a href="#">NUESTROS GARITOS</a>
