--- a/source/html/registro.html
+++ b/source/html/registro.html
@@ -5,7 +5,7 @@
     <title>Regístrate en La Leche Music</title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
-<body>
+<body class="bodyregistro">
     <div class="container">
     	<header></header> <!-- HAY QUE INCLUIR EL HEADER -->
             <div>
