--- a/source/html/homepage_sucia.html
+++ b/source/html/homepage_sucia.html
@@ -32,25 +32,59 @@
 	<div id="biglogo"><img src="../img/big_logo.png" alt=""></div>
 	<div id="search"><input type="search" name="buscador" id="" placeholder="Buscar..."></div>
 	
-	<div class="title-homepage">Nuestras Bandas</div>
-	<div id="img-bandas"> Imatge bandas<img src=""></img></div>
-	<div class="info">
-		<div id="txt-bandas"> Text bandas</div>
-		<div id="destacado-bandas"> Destac bandas</div>
-	</div>
-	
-	<div class="title-homepage">Nuestros garitos</div>
-	<div id="img-garitos"> Imatge garitos<img src=""></img></div>
-	<div class="info">
-		<div id="txt-garitos"> Text garitos</div>
-		<div id="destacado-garitos"> Destacat garitos</div>
-	</div>
-	
-	<div class="title-homepage">Nuestros bolos</div>
-	<div id="img-bolos"> Imatge bolos<img src=""></img></div>
-	<div class="info">
-		<div id="txt-bolos"> Text bolos</div>
-		<div id="destacado-bolos"> Destac bolos</div>
+	<div class="maindiv-homepage">
+		
+		<div class="div-homepage">
+			<div class="title-homepage">Nuestras Bandas</div>
+			<div class="block-div-homepage">
+				<div id="img-bandas"> Imatge bandas<img src=""></img></div>
+				<div class="info">
+					<div class="text-homepage"> Text bandas</div>
+					<div class="text-best-homepage"> LAS MEJORES BANDAS DE ESTE MES</div>
+					<div class="div-pics-best-homepage"> 
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="div-homepage">
+			<div class="title-homepage">Nuestros garitos</div>
+			<div class="block-div-homepage">
+				<div id="img-garitos"> Imatge garitos<img src=""></img></div>
+				<div class="info">
+					<div class="text-homepage"> Text garitos</div>
+					<div class="text-best-homepage"> LOS MEJORES GARITOS DE ESTE MES</div>
+					<div class="div-pics-best-homepage"> 
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="div-homepage">
+			<div class="title-homepage">Nuestros bolos</div>
+			<div class="block-div-homepage">
+				<div id="img-bolos"> Imatge bolos<img src=""></img></div>
+				<div class="info">
+					<div class="text-homepage"> Text bolos</div>
+					<div class="text-best-homepage"> LOS MEJORES BOLOS DE ESTE MES</div>
+					<div class="div-pics-best-homepage"> 
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+						<div class="pics-best-homepage"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 	</div>
 	
 	<div class="img-last"> Imatge last<img src="" alt=""></div>
