25/11/2016 4:18 --- Mejoras en la homepage, añadido directorio source/img/icons con botones para el menú de la homepage (usadlo en general para iconos), backgrounds cambiados etc

--- a/source/html/homepage.html
+++ b/source/html/homepage.html
@@ -8,23 +8,22 @@
 	
 </head>
 <body class="bodyhomepage">
-	<header class="headerperfiles">
-			<nav id="Menu">
-			  <a href="#">NUESTRAS BANDAS</a>
-			  <a href="#">NUESTROS GARITOS</a>
-			  <a href="#">NUESTROS BOLOS</a>
-			  <a href="#">LO ÚLTIMO</a>
-			  <a href="#">ESTILOS MUSICALES</a>
+	<header class="headerhomepage">
+			<nav id="Menu" class="menuhomepage">
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrasbandas.jpg"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrosgaritos.jpg"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrosbolos.jpg"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/loultimo.jpg"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/estilosmusicales.jpg"></a>
 			</nav>
-			<div id="registros">
+			<div id="registros" class="loginregister-homepage">
 				<form action="registro.html"> <!--Aqui va la pagina a la que redirige el buton-->	
-	   				<input type="submit" value="Registrate" />
+	   				<input class="loginregister-button" type="submit" value="Registrate" />
 	   			</form>
 	   			<form action="#"></form>
-					<input type="submit" value="Inicia sesión" /><!--Aqui va la pagina a la que redirige el buton-->
+					<input class="loginregister-button" type="submit" value="Inicia sesión" /><!--Aqui va la pagina a la que redirige el buton-->
 				</form>
-				<a href="#"></a>
-				<a href="#"></a>
+				
 				
 			</div>
 			
@@ -38,15 +37,15 @@
 			<div class="div-homepage">
 				<div class="title-homepage">Nuestras Bandas</div>
 				<div class="block-div-homepage">
-					<div id="img-bandas"> Imatge bandas<img src=""></img></div>
+					<div class="img-article"> <img src="../img/mejoresbolos.jpg"></img></div>
 					<div class="info">
 						<div class="text-homepage"> <p>Lorem fistrum de la pradera jarl laboris tiene musho peligro nostrud ese pedazo de a peich hasta luego Lucas velit. Elit diodeno jarl ex consequat me cago en tus muelas se calle ustée se calle ustée. Al ataquerl de la pradera aliquip enim ahorarr ut minim minim commodo. Diodeno eiusmod qui papaar papaar. Dolore nostrud ex ese hombree. Diodenoo diodenoo por la gloria de mi madre labore.</div>
 						<div class="text-best-homepage"> LAS MEJORES BANDAS DE ESTE MES</div>
 						<div class="div-pics-best-homepage"> 
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -55,15 +54,15 @@
 			<div class="div-homepage">
 				<div class="title-homepage">Nuestros garitos</div>
 				<div class="block-div-homepage">
-					<div id="img-garitos"> Imatge garitos<img src=""></img></div>
+					<div class="img-article"><img src="../img/mejoresbolos.jpg"></img></div>
 					<div class="info">
 						<div class="text-homepage"> <p>Lorem fistrum de la pradera jarl laboris tiene musho peligro nostrud ese pedazo de a peich hasta luego Lucas velit. Elit diodeno jarl ex consequat me cago en tus muelas se calle ustée se calle ustée. Al ataquerl de la pradera aliquip enim ahorarr ut minim minim commodo. Diodeno eiusmod qui papaar papaar. Dolore nostrud ex ese hombree. Diodenoo diodenoo por la gloria de mi madre labore.</div>
 						<div class="text-best-homepage"> LOS MEJORES GARITOS DE ESTE MES</div>
 						<div class="div-pics-best-homepage"> 
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -72,15 +71,15 @@
 			<div class="div-homepage">
 				<div class="title-homepage">Nuestros bolos</div>
 				<div class="block-div-homepage">
-					<div id="img-bolos"> Imatge bolos<img src=""></img></div>
+					<div class="img-article"> <img src="../img/mejoresbolos.jpg"></img></div>
 					<div class="info">
 						<div class="text-homepage"> <p>Lorem fistrum de la pradera jarl laboris tiene musho peligro nostrud ese pedazo de a peich hasta luego Lucas velit. Elit diodeno jarl ex consequat me cago en tus muelas se calle ustée se calle ustée. Al ataquerl de la pradera aliquip enim ahorarr ut minim minim commodo. Diodeno eiusmod qui papaar papaar. Dolore nostrud ex ese hombree. Diodenoo diodenoo por la gloria de mi madre labore.</div>
 						<div class="text-best-homepage"> LOS MEJORES BOLOS DE ESTE MES</div>
 						<div class="div-pics-best-homepage"> 
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
-							<div class="pics-best-homepage"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
+							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -88,7 +87,7 @@
 			
 		</div>
 		
-		<div class="#">
+		<div class="#">  <!--TODO poner estilo aqui primos-->
 			<div class="title-homepage">Lo Ultimo</div>
 			<div class="img-last"> Imatge last<img src="" alt=""></div>
 			<div class="img-last"> Imatge last<img src="" alt=""></div>
@@ -102,8 +101,8 @@
 			<div class="txt-last-deux"> Text last 2</div>
 		</div>
 		
-		<div class="#">
-			<div class="title-homepage">ESTILOS MUSICALES</div>
+		<div class="#">  <!--TODO poner estilo aqui primos-->
+			<div class="title-homepage">Estilos Musicales</div>
 			<div class="img-estilos"> Imatge estils</div>
 			<div class="center-estilos">
 				<div id="estilos"> Estilos</div>
