Menú homepage por fin pegado a la izq (el problema era el body) y botones pepinos añadidos

--- a/source/html/homepage.html
+++ b/source/html/homepage.html
@@ -10,11 +10,11 @@
 <body class="bodyhomepage">
 	<header class="headerhomepage">
 			<nav id="Menu" class="menuhomepage">
-			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrasbandas.jpg"></a>
-			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrosgaritos.jpg"></a>
-			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrosbolos.jpg"></a>
-			  <a href="#" class="menuitem-homepage"><img src="../img/icons/loultimo.jpg"></a>
-			  <a href="#" class="menuitem-homepage"><img src="../img/icons/estilosmusicales.jpg"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrasbandas.png"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrosgaritos.png"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrosbolos.png"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/loultimo.png"></a>
+			  <a href="#" class="menuitem-homepage"><img src="../img/icons/estilosmusicales.png"></a>
 			</nav>
 			<div id="registros" class="loginregister-homepage">
 				<form action="registro.html"> <!--Aqui va la pagina a la que redirige el buton-->	
