28/11/2016 20:22 --- Commit pre-revisión, quitadas palabras malsonantes

--- a/source/html/homepage.html
+++ b/source/html/homepage.html
@@ -10,9 +10,9 @@
 <body class="bodyhomepage">
 	<header class="headerhomepage">
 			<nav id="Menu" class="menuhomepage">
-			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrasbandas.png"></a>
-			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrosgaritos.png"></a>
-			  <a href="#" class="menuitem-homepage"><img src="../img/icons/nuestrosbolos.png"></a>
+			  <a href="homepage.html#Bandas" class="menuitem-homepage"><img src="../img/icons/nuestrasbandas.png"></a>
+			  <a href="homepage.html#Garitos" class="menuitem-homepage"><img src="../img/icons/nuestrosgaritos.png"></a>
+			  <a href="homepage.html#Bolos" class="menuitem-homepage"><img src="../img/icons/nuestrosbolos.png"></a>
 			  <a href="#" class="menuitem-homepage"><img src="../img/icons/loultimo.png"></a>
 			  <a href="#" class="menuitem-homepage"><img src="../img/icons/estilosmusicales.png"></a>
 			</nav>
@@ -34,11 +34,12 @@
 		
 		<div class="maindiv-homepage">
 			
-			<div class="div-homepage">
-				<div class="title-homepage">Nuestras Bandas</div>
+			<div  id="Bandas" class="div-homepage">
+				<div class="title-homepage">NUESTRAS BANDAS</div>
 				<div class="block-div-homepage">
 					<div class="img-article"> <img src="../img/mejoresbolos.jpg"></img></div>
-					<div class="info">
+				</div>
+				<div class="block-div-homepage">
 						<div class="text-homepage"> <p>Lorem fistrum de la pradera jarl laboris tiene musho peligro nostrud ese pedazo de a peich hasta luego Lucas velit. Elit diodeno jarl ex consequat me cago en tus muelas se calle ustée se calle ustée. Al ataquerl de la pradera aliquip enim ahorarr ut minim minim commodo. Diodeno eiusmod qui papaar papaar. Dolore nostrud ex ese hombree. Diodenoo diodenoo por la gloria de mi madre labore.</div>
 						<div class="text-best-homepage"> LAS MEJORES BANDAS DE ESTE MES</div>
 						<div class="div-pics-best-homepage"> 
@@ -47,15 +48,15 @@
 							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 						</div>
-					</div>
 				</div>
 			</div>
 			
-			<div class="div-homepage">
-				<div class="title-homepage">Nuestros garitos</div>
+			<div id="Garitos" class="div-homepage">
+				<div class="title-homepage">NUESTROS GARITOS</div>
 				<div class="block-div-homepage">
 					<div class="img-article"><img src="../img/mejoresbolos.jpg"></img></div>
-					<div class="info">
+				</div>
+				<div class="block-div-homepage">
 						<div class="text-homepage"> <p>Lorem fistrum de la pradera jarl laboris tiene musho peligro nostrud ese pedazo de a peich hasta luego Lucas velit. Elit diodeno jarl ex consequat me cago en tus muelas se calle ustée se calle ustée. Al ataquerl de la pradera aliquip enim ahorarr ut minim minim commodo. Diodeno eiusmod qui papaar papaar. Dolore nostrud ex ese hombree. Diodenoo diodenoo por la gloria de mi madre labore.</div>
 						<div class="text-best-homepage"> LOS MEJORES GARITOS DE ESTE MES</div>
 						<div class="div-pics-best-homepage"> 
@@ -64,15 +65,15 @@
 							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 						</div>
-					</div>
 				</div>
 			</div>
 			
-			<div class="div-homepage">
-				<div class="title-homepage">Nuestros bolos</div>
+			<div id="Bolos" class="div-homepage">
+				<div class="title-homepage">NUESTROS BOLOS</div>
 				<div class="block-div-homepage">
 					<div class="img-article"> <img src="../img/mejoresbolos.jpg"></img></div>
-					<div class="info">
+				</div>
+				<div class="block-div-homepage">
 						<div class="text-homepage"> <p>Lorem fistrum de la pradera jarl laboris tiene musho peligro nostrud ese pedazo de a peich hasta luego Lucas velit. Elit diodeno jarl ex consequat me cago en tus muelas se calle ustée se calle ustée. Al ataquerl de la pradera aliquip enim ahorarr ut minim minim commodo. Diodeno eiusmod qui papaar papaar. Dolore nostrud ex ese hombree. Diodenoo diodenoo por la gloria de mi madre labore.</div>
 						<div class="text-best-homepage"> LOS MEJORES BOLOS DE ESTE MES</div>
 						<div class="div-pics-best-homepage"> 
@@ -81,7 +82,6 @@
 							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 							<div class="pics-best-homepage"><img src="../img/imagen-little.jpg"></div>
 						</div>
-					</div>
 				</div>
 			</div>
 			
