Añadidos campos requeridos en el formulario (telefono, imagen, etc)

--- a/source/html/homepage.html
+++ b/source/html/homepage.html
@@ -18,7 +18,7 @@
 			</nav>
 			<div id="registros" class="loginregister-homepage">
 				<form action="registro.html"> <!--Aqui va la pagina a la que redirige el buton-->	
-	   				<input class="loginregister-button" type="submit" value="Registrate" />
+	   				<input class="loginregister-button" type="submit" value="Registrarse" />
 	   			</form>
 	   			<form action="#"></form>
 					<input class="loginregister-button" type="submit" value="Inicia sesión" /><!--Aqui va la pagina a la que redirige el buton-->
